fix: remove small horizontal overflow on some navigators/os

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,6 +26,9 @@
     --mono: 'DM Mono', monospace;
     --sans: 'DM Sans', sans-serif;
 }
+html {
+    scrollbar-gutter: stable;
+}
 body {
     background: var(--bg);
     color: var(--text);
